# software-judging

./: .gitmodules  README.md  app.py  clearances.ods  getSVG.py  kibot_generated.kibot.yaml  make-appimage.sh  output.fa  results.txt  thsGen.ipynb  thsGen.py  thsGenerator.kv
.github/workflows/: build.yml  cmake-build.yml  commit-message-env.sh  commit-submodule-message-env.sh  kibot.yml  lint.yml  merge.yml  mirror.yml  reconstruct-root-gitmodules.sh
backend/: package-lock.json
firmware/: .gitignore  README.md
firmware/.github/workflows/: mirror.yml
firmware/src/: pico_sdk_import.cmake
firmware/src/core/usb/: vendor_request.h
firmware/src/flashloader/: dfu.c
firmware/src/flashloader/ihex/: process.h
firmware/src/linker/: helper.cmake
genoswitch-rp2040/: genoswitch-rp2040.kicad_pcb  genoswitch-rp2040.kicad_pro  genoswitch-rp2040.kicad_sch  sym-lib-table
hardware/: LICENSE
hardware/.github/workflows/: mirror.yml
hardware/firmware/: .gitmodules  50-genoswitch.rules
hardware/firmware/lib/universal-hex/: .prettierrc.js
hardware/firmware/src/core/: determine_device_type.c  determine_device_type.h  main.c  main.cmake  main.h  semaphores.h
hardware/firmware/src/core/mcp3008/hardware/: mcp3008_hardware.c
hardware/firmware/src/core/mcp3008/pio/: pio_spi.c  pio_spi.h
hardware/firmware/src/core/rtos-config/: FreeRTOSConfig.h
hardware/firmware/src/core/tasks/: bulk.c
hardware/firmware/src/core/tinyusb-config/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
hardware/firmware/src/core/usb/: tasks.h  webusb.c
hardware/firmware/src/flashloader/: check-node-deps.cmake  combined.cmake  crc32.c  crc32.h  dfu.h  init.cmake  main.cmake  main.h  spinlock.c  spinlock.h
hardware/firmware/src/flashloader/ihex/: LICENSE  README.md  flash.c  process.c  process.h  record.h  util.c
hardware/firmware/src/linker/flashloader/: flashloader.ld
hardware/genoswitch-rp2040/: sym-lib-table
hardware/hardware/: README.md  clearances.ods
hardware/hardware/genoswitch-rp2040/: fp-lib-table  genoswitch-rp2040.kicad_pcb  genoswitch-rp2040.kicad_pro  genoswitch-rp2040.kicad_sch  sym-lib-table
hardware/hardware/lib/: Genoswitch.kicad_sym  MCU_RaspberryPi.kicad_sym
hardware/hardware/lib/mouser/: ABLS-12.000MHZ-B4-T.mod
hardware/hardware/lib/mouser/PTS815_SJM_250_SMTR_LFS/: PTS815_SJM_250_SMTR_LFS.lib  PTS815_SJM_250_SMTR_LFS.mod
hardware/hardware/lib/ultralibrarian/: SOIC_128JVSIM_WIN.step
lib/: Genoswitch.kicad_sym
lib/mouser/: ABLS-12.000MHZ-B4-T.lib
lib/mouser/PTS815_SJM_250_SMTR_LFS/: PTS815_SJM_250_SMTR_LFS.dcm  PTS815_SJM_250_SMTR_LFS.kicad_sym  part_info.txt
lib/universal-hex/: main.js  package-lock.json  package.json
software/: app.py  getMiRBase.py  output.fa  results.txt  thsGen.py  thsGenerator.kv
software/.github/workflows/: build.yml
software/src/: getSVG.py
src/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  app.py  combined.cmake  flashloader-helper.cmake  flashloader.cmake  main.c  main.cmake  main.h
src/core/: config.h  feature_set.c  feature_set.h  main.c  main.cmake  main.h  semaphores.c  semaphores.h
src/core/mcp3008/: mcp3008.c  mcp3008.h  pinout.h
src/core/mcp3008/hardware/: mcp3008_hardware.c  mcp3008_hardware.h
src/core/mcp3008/pio/: mcp3008_pio.c  mcp3008_pio.h  pio_spi.h
src/core/rtos-config/: FreeRTOSConfig.h
src/core/tasks/: bulk.c  bulk.h  mcu_temperature.c  mcu_temperature.h
src/core/tinyusb-config/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/core/usb/: tasks.c  tasks.h  vendor_request.c  vendor_request.h  webusb.c  webusb.h
src/flashloader/: combined.cmake  crc32.c  crc32.h  dfu.c  dfu.h  flashloader.c  flashloader.cmake  main.c  main.cmake  main.h  null.c  spinlock.c  spinlock.h  util.c
src/flashloader/ihex/: LICENSE  flash.c  flash.h  process.c  process.h  record.c  record.h
src/linker/: application-standalone.ld  application.ld  defines.ld  flashloader.ld  helper.cmake  null.c
src/linker/flashloader/: application.ld  defines.ld
src/rtos-config/: FreeRTOSConfig.h
src/tasks/: bulk.c  bulk.h  mcu_temperature.c  mcu_temperature.h
src/tinyusb-config/: usb_descriptors.c
src/usb/: vendor_request.c  vendor_request.h  webusb.c  webusb.h
